--- a/.github/workflows/collect_configs.yml
+++ b/.github/workflows/collect_configs.yml
@@ -1,33 +1,34 @@
-name: Collect V2Ray Configs
+name: Collect VLESS and Hysteria2 Configs
 on:
   schedule:
-    - cron: '0 */1 * * *'  # هر 1 ساعت
-  workflow_dispatch:
+    - cron: '*/30 * * * *'  # اجرای هر 30 دقیقه
+  workflow_dispatch:  # امکان اجرای دستی
+
 jobs:
-  collect:
+  collect-configs:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y iputils-ping
-          pip install telethon pycountry ip2geotools
-      - name: Run script
-        env:
-          TELEGRAM_API_ID: ${{ secrets.TELEGRAM_API_ID }}
-          TELEGRAM_API_HASH: ${{ secrets.TELEGRAM_API_HASH }}
-          TELEGRAM_PHONE: ${{ secrets.TELEGRAM_PHONE }}
-          V2RAY_TOKEN: ${{ secrets.V2RAY_TOKEN }}
-        run: python collect_configs.py
-      - name: Commit changes
-        run: |
-          git config --global user.name 'GitHub Action Bot'
-          git config --global user.email 'bot@github.com'
-          git add vless_hysteria2_configs.txt
-          git commit -m 'Update VLESS and Hysteria2 configs' || echo "No changes to commit"
-          git push
+    - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install telethon pycountry ip2geotools
+    - name: Run script
+      env:
+        TELEGRAM_API_ID: ${{ secrets.TELEGRAM_API_ID }}
+        TELEGRAM_API_HASH: ${{ secrets.TELEGRAM_API_HASH }}
+        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        V2RAY_TOKEN: ${{ secrets.V2RAY_TOKEN }}
+        GITHUB_REPOSITORY: ${{ github.repository }}
+      run: python collect_configs.py
+    - name: Commit and push changes
+      run: |
+        git config --global user.name 'GitHub Action Bot'
+        git config --global user.email 'bot@github.com'
+        git add .
+        git commit -m "Update configs via GitHub Actions" || echo "No changes to commit"
+        git push
