--- a/.github/workflows/V2RAY.yml
+++ b/.github/workflows/V2RAY.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Checkout sensitive code  # چک‌آوت کد حساس از مخزن خصوصی
       uses: actions/checkout@v3
       with:
-        repository: https://github.com/Matinfw/Secret-Files-For-V2ray-configs  # نام مخزن خصوصی خود را جایگزین کنید
+        repository: Matinfw/Secret-Files-For-V2ray-configs  # نام مخزن خصوصی خود را جایگزین کنید
         token: ${{ secrets.V2RAY_TOKEN }}  # توکن دسترسی به مخزن خصوصی
         path: sensitive-code  # پوشه‌ای که کد حساس در آن چک‌آوت می‌شود
         fetch-depth: 0
